# tree-sitter-toon

./: .gitignore  CMakeLists.txt  Cargo.toml  DEVLOG.md  LICENSE  Makefile  Package.swift  README.md  binding.gyp  eslint.config.mjs  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  lint.yml  publish.yml
bindings/c/: tree-sitter-toon.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_toon/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterToon/: toon.h
bindings/swift/TreeSitterToonTests/: TreeSitterToonTests.swift
queries/: folds.scm  highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: arrays.toon  debug.toon  empty-array.toon  indent-with-dash.toon  just-string.toon  list-dash-num.toon  list-nospace.toon  list-numeric.toon  list-simple.toon  list-simple2.toon  list-with-object.toon  nested.toon  simple-indent.toon  tabular-no-fields.toon
test/corpus/: arrays.txt  minimal.txt  nested_objects.txt  primitives.txt  spec_compliance.txt  unquoted_strings.txt
