[package]
name = "tree-sitter-toon"
description = "Tree-sitter grammar for TOON (Token-Oriented Object Notation)"
version = "0.1.3"
authors = ["DanEscher98"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "toon"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/danescher98/tree-sitter-toon"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.25"
