[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-toon"
description = "Tree-sitter grammar for TOON (Token-Oriented Object Notation)"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "toon"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "DanEscher98" }]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/danescher98/tree-sitter-toon"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
